epigraph from Bakker
Ignore-this: bf48b8fd207769752f67b8085df07537

darcs-hash:20090924235232-115f9-735d2a972297ec4ae21bfbfe615fa237690301d2.gz

--- a/sec-5-results.tex
+++ b/sec-5-results.tex
@@ -3,8 +3,12 @@
 %
 
 \chapter{Results}
-\epigraph{Dionysus [is] the Master of Illusions, who could make a vine 
-grow out of a ship's plank, and in general enable his votaries to see 
-the world as the world's not.}%
-{\textsc{---e.\ r.\ dodds}\\\textit{The Greeks and the Irrational}}
+% \epigraph{Dionysus [is] the Master of Illusions, who could make a vine grow 
+% out grow out of a ship's plank, and in general enable his votaries to see the 
+% world as the world's not.}%
+% {\textsc{---e.\ r.\ dodds}\\\textit{The Greeks and the Irrational}}
+
+\epigraph{If the immutable appears recast, then you yourself have been 
+transformed.}%
+{\textsc{---r.\ scott bakker}\\\textit{The Judging Eye}}
 
