--- a/preamble.tex
+++ b/preamble.tex
@@ -4,7 +4,8 @@
 
 %
 % Document class definition
-\documentclass[10pt,a4paper,twoside,draft]{book}
+%
+\documentclass[11pt,a4paper,twoside,final]{book}
 
 \usepackage{ifpdf}
 \ifpdf
@@ -23,10 +24,12 @@
 \usepackage{amssymb,amsmath}
 \usepackage{calc}
 \usepackage{caption}
-\usepackage[usenames,dvipsnames]{color}
+\usepackage[usenames,dvipsnames]{xcolor}
+\usepackage{doi}
 \usepackage{epigraph}
 \usepackage{fancyhdr}
 \usepackage{graphicx}
+\usepackage[all]{hypcap}
 \usepackage{ifthen}
 \usepackage{lastpage}
 \usepackage{listings}
