--- a/sec-2-background.tex
+++ b/sec-2-background.tex
@@ -3,7 +3,8 @@
 %
 % The literature review is an organisational pattern that combines both summary
 % and synthesis. It may give a new interpretation of old material, combine old
-% and new interpretations, or trace the intellectual progression of a field.
+% and new interpretations, or trace the intellectual progression of a field. It
+% should be organised around ideas, not expand each source individually.
 %
 % - What themes and issues connect the sources together?
 % - What solutions are present, which aspects are missing?
@@ -13,4 +14,29 @@
 \chapter{Background}
 \epigraph{Why waste time learning, when ignorance is instantaneous?}
 {\textsc{---calvin and hobbes}}
+
+%
+% Progression:
+%  1. Technology trends, move towards increasing parallelism
+%  2. Parallel computing, introduce NDP and speedup/code -> inf promise
+%  3. GPGPU. Short history. Problems, need for reuse, abstraction from HW
+%  4. Develop a need/motivation to combine (2) and (3)
+%
+% Organisation:
+%  1. Introduction: quick idea of the topic, central theme
+%  2. Body: sources thematically
+%  3. Conclusion and recommendations
+%
+
+
+Modern microprocessor technology is constructed from millions of interconnected
+switching devices, called transistors. As process technology advances, these
+transistors, and the interconnections between them, can be fabricated in a
+smaller area. The challenge for microprocessor architects is to translate this
+increase in resources into an increase in performance.
+
+Computers are no longer getting faster; instead, we will be offered computers
+containing more and more CPUs, each of which is individually no faster than
+those of the previous generation. As the number of CPUs increases, it will
+become increasingly difficult for programmers to 
 
