--- a/sec-5-results.tex
+++ b/sec-5-results.tex
@@ -8,7 +8,10 @@
 % world as the world's not.}%
 % {\textsc{---e.\ r.\ dodds}\\\textit{The Greeks and the Irrational}}
 
-\epigraph{If the immutable appears recast, then you yourself have been 
-transformed.}%
-{\textsc{---r.\ scott bakker}\\\textit{The Judging Eye}}
+% \epigraph{If the immutable appears recast, then you yourself have been 
+% transformed.}%
+% {\textsc{---r.\ scott bakker}\\\textit{The Judging Eye}}
+
+\epigraph{Logic merely enables one to be wrong with authority}%
+{\textsc{---the doctor}} %\\\textit{The Wheel in Space}}
 
