--- a/sec-i-disclaimer.tex
+++ b/sec-i-disclaimer.tex
@@ -7,12 +7,12 @@
 \noindent\makebox[0pt][l]{\begin{minipage}{\textwidth}
 \flushleft
 \begin{small}
-%    Cover art: Rost, Randi~J., 1960--\\
-%    OpenGL Shading Language / Randi J. Rost; with contributions from 
-%    John M.~Kessenich \ldots\ [et al.]. --- 2nd ed.
-%    (ISBN 0-321-33489-2)
-%
-%    \vspace{4ex}
+    Cover art: Rost, Randi~J., 1960--\\
+    OpenGL Shading Language / Randi J. Rost; with contributions from 
+    John M.~Kessenich \ldots\ [et al.]. --- 2nd ed.
+    (ISBN 0-321-33489-2)
+
+    \vspace{4ex}
 %
 %    \emph{\project} copyright \copyright\ 2009, Trevor L. McDonell\\
 %    Original Author: Trevor L. McDonell (trevor.mcdonell@gmail.com)
