--- a/title.tex
+++ b/title.tex
@@ -52,7 +52,7 @@
 %    \hspace{0.5cm}\includegraphics{images/sec-0/julia-elephant-s}
 %    \vspace*{1.87333708001in}	% height of julia-elephant-s
 
-    \hspace{0.5cm}\includegraphics[height=1.87in]{images/misc/placeholder}
+%    \hspace{0.5cm}\includegraphics[height=1.87in]{images/misc/placeholder}
 %    \vspace*{1.87in}
 \end{minipage}}
 
