--- a/sec-1-introduction.tex
+++ b/sec-1-introduction.tex
@@ -3,9 +3,11 @@
 %
 
 \chapter{Introduction}
-\epigraph{Come then, and let us pass a leisure hour in 
-storytelling,\\and our story shall be the education of our heroes.}%
-{\textsc{---plato}\\\textit{Republic}, \textsc{book ii}}
+\epigraph{First things first, but not necessarily in that order.}
+{\textsc{---the doctor}}
+%\epigraph{Come then, and let us pass a leisure hour in 
+%storytelling,\\and our story shall be the education of our heroes.}%
+%{\textsc{---plato}\\\textit{Republic}, \textsc{book ii}}
 
 
 Over the last ten years, an interesting trend in computing has emerged. General
@@ -17,7 +19,8 @@ in general purpose workloads, and the physical limitations of power dissipation
 for integrated circuits. The additional millions and billions of transistors
 afforded by Moore's Rule\footnote{Moore's actual prediction in 1965 referred
 only to the number of devices that could be fabricated on a single die, and that
-this quantity would increase by fifty percent each year.} are simply not very
+this quantity would increase by fifty percent each year \cite{Moore:1965}.} are 
+simply not very
 productive in increasing the performance of single--threaded code.
 
 At the same time, the commodity \indexe{graphics processing unit} (GPU) has been
@@ -45,7 +48,7 @@ performance. To be practicable, the GPU programming model must efficiently
 support messy boundary conditions, irregular data and control flow patterns, and
 provide an elegant mapping from the application to the underling architecture,
 without forcing the programmer to recast their algorithm. Support for
-\indexe{nested data parallelism}\cite{Blelloch:1994,Blelloch:1996} (NDP) would
+\indexe{nested data parallelism} \cite{Blelloch:1994,Blelloch:1996} (NDP) would
 provide a first step towards a viable GPU programming model, unshackling vast
 computational resources from the small application niche for which they were
 originally designed.
