add thumb index
Ignore-this: ace2b0e83711cbfffe3ebdcb154ebb2e

darcs-hash:20121126041442-115f9-18696975226642e3c81c36e2adefa5289e49ca31.gz

--- a/preamble.tex
+++ b/preamble.tex
@@ -43,6 +43,7 @@
 \usepackage[color]{showkeys}
 \usepackage{subfig}
 \usepackage{titlesec}
+\usepackage[width={autoauto}]{thumbs}
 
 %
 % Bibliography
