insert additional chapter for optimisation work

--- a/sec-6-results.tex
+++ b/sec-6-results.tex
@@ -1,6 +1,8 @@
 %
 % sec-5-results.tex
 %
+% analysis, example programs
+%
 
 \chapter{Results}
 % \epigraph{Dionysus [is] the Master of Illusions, who could make a vine grow 
