--- a/sec-7-conclusion.tex
+++ b/sec-7-conclusion.tex
@@ -1,6 +1,8 @@
 %
 % sec-6-conclusion.tex
 %
+% conclusions, related work, future work
+%
 
 \chapter{Conclusion}
 \epigraph{The best way to predict the future is to implement it.}
