--- a/thesis.tex
+++ b/thesis.tex
@@ -64,8 +64,9 @@
 \include{sec-2-background}
 \include{sec-3-design}
 \include{sec-4-implementation}
-\include{sec-5-results}
-\include{sec-6-conclusion}
+\include{sec-5-optimisation}
+\include{sec-6-results}
+\include{sec-7-conclusion}
 
 % BACK MATTER
 % ~~~~~~~~~~~
