some basic text and section outline bullet points

--- a/sec-1-introduction.tex
+++ b/sec-1-introduction.tex
@@ -1,14 +1,13 @@
-%
-% sec-1-introduction.tex
-%
 
 \chapter{Introduction}
 \epigraph{First things first, but not necessarily in that order.}
 {\textsc{---the doctor}}
+
 %\epigraph{Come then, and let us pass a leisure hour in 
 %storytelling,\\and our story shall be the education of our heroes.}%
 %{\textsc{---plato}\\\textit{Republic}, \textsc{book ii}}
 
+\textcolor{red}{This needs to be redone}
 
 Over the last ten years, an interesting trend in computing has emerged. General
 purpose CPUs, such as those provided by Intel, IBM and AMD, have increased
@@ -19,16 +18,16 @@ in general purpose workloads, and the physical limitations of power dissipation
 for integrated circuits. The additional millions and billions of transistors
 afforded by Moore's Rule\footnote{Moore's actual prediction in 1965 referred
 only to the number of devices that could be fabricated on a single die, and that
-this quantity would increase by fifty percent each year \cite{Moore:1965}.} are 
-simply not very
-productive in increasing the performance of single--threaded code.
+this quantity would increase by fifty percent each year \cite{Moore:1965}.} are
+simply not very productive in increasing the performance of single--threaded
+code.
 
 At the same time, the commodity \indexe{graphics processing unit} (GPU) has been
 able to use this ever increasing transistor budget effectively, geometrically
-increasing rendering performance, since rendering is an inherently parallel
+increasing rendering performance, since rasterisation is an inherently parallel
 operation. Historically fixed function pipelines, modern graphics architectures
 have evolved to become increasingly flexible as well as powerful, consisting of
-an expressing set of general purpose computation resources, with some fixed
+an expressive set of general purpose computation resources, with some fixed
 function units on the side.
 
 Parallel programming models fall into two broad categories. Task parallelism
@@ -47,9 +46,9 @@ relatively slow, engendering high communication latencies which radically impair
 performance. To be practicable, the GPU programming model must efficiently
 support messy boundary conditions, irregular data and control flow patterns, and
 provide an elegant mapping from the application to the underling architecture,
-without forcing the programmer to recast their algorithm. Support for
-\indexe{nested data parallelism} \cite{Blelloch:1994,Blelloch:1996} (NDP) would
-provide a first step towards a viable GPU programming model, unshackling vast
-computational resources from the small application niche for which they were
-originally designed.
+without forcing the programmer to recast their algorithm. Support for nested
+data parallelism \cite{Blelloch:1994,Blelloch:1996} (NDP) would provide a first
+step towards a viable GPU programming model, unshackling vast computational
+resources from the small application niche for which they were originally
+designed.
 
