--- a/sec-3-design.tex
+++ b/sec-3-design.tex
@@ -1,9 +1,35 @@
-%
-% sec-3-design.tex
-%
 
 \chapter{Design}
-\epigraph{You see a wile, you thwart. Am I right?}{\textsc{---terry 
-pratchett and neil gaiman}\\\textit{Good Omens}}
+\epigraph{You see a wile, you thwart. Am I right?}%
+{\textsc{---terry pratchett and neil gaiman}\\\textit{Good Omens}}
+
+\begin{itemize}
+    \item design of a stratified language (steal from DAMP)
+        \begin{itemize}
+            \item using the type system to exclude nesting
+            \item richly typed terms; environments \& types
+            \item types $\Rightarrow$ correctness??
+        \end{itemize}
+
+    \item Related work, why it sucks
+        \begin{itemize}
+            \item open source: C/C++, Python, Haskell
+            \item commercial: Matlab (Jacket), ArrayFire
+        \end{itemize}
+
+    \item Why another parallel programming language?
+        \begin{itemize}
+            \item expressiveness? (NDP \#fail \#sadface)
+            \item ease of use?
+        \end{itemize}
+
+    \item Accelerate \textit{design}
+        \begin{itemize}
+            \item programming model
+            \item algorithmic skeletons
+            \item examples: operator expressiveness (application driven)
+        \end{itemize}
+
+\end{itemize}
 
 
