--- a/sec-6-results.tex
+++ b/sec-6-results.tex
@@ -1,6 +1,4 @@
 %
-% sec-5-results.tex
-%
 % analysis, example programs
 %
 
@@ -16,4 +14,14 @@
 
 \epigraph{Logic merely enables one to be wrong with authority}%
 {\textsc{---the doctor}} %\\\textit{The Wheel in Space}}
+
+\begin{itemize}
+    \item performance \& analysis
+    \item expressiveness / example programs
+    \item difficulties
+    \begin{itemize}
+        \item code generation
+        \item unintentional nesting
+    \end{itemize}
+\end{itemize}
 
