--- a/sec-7-conclusion.tex
+++ b/sec-7-conclusion.tex
@@ -1,10 +1,33 @@
 %
-% sec-6-conclusion.tex
-%
 % conclusions, related work, future work
 %
 
 \chapter{Conclusion}
 \epigraph{The best way to predict the future is to implement it.}
 {\textsc{---david heinemeier hansson}}
+
+\begin{itemize}
+    \item future work
+        \begin{itemize}
+            \item frontend
+                \begin{itemize}
+                    \item fusion cost analysis
+                    \item user controllable fusion
+                    \item used definable rewrite rules
+                \end{itemize}
+            \item backend
+                \begin{itemize}
+                    \item type-preserving code generation
+                \end{itemize}
+            \item language
+                \begin{itemize}
+                    \item first order flattening
+                \end{itemize}
+        \end{itemize}
+
+    \item more related work?
+
+    \item conclusions
+
+\end{itemize}
 
