--- a/thesis.tex
+++ b/thesis.tex
@@ -3,8 +3,10 @@
 %
 
 \newcommand{\project}{$<<$project$>>$}
-\newcommand{\doctitle}{Crossing the Streams}
-\newcommand{\docsubtitle}{Functional Parallel Programming for Graphics Processing Units}
+%\newcommand{\doctitle}{Crossing the Streams}
+%\newcommand{\docsubtitle}{Functional Parallel Programming for Graphics Processing Units}
+\newcommand{\doctitle}{Optimising data-parallel programs for SIMD architectures via program transformation}
+\newcommand{\docsubtitle}{}
 \newcommand{\doccontentsline}{Functional Programming for GPUs}
 
 \input{preamble}
@@ -72,9 +74,9 @@
 % ~~~~~~~~~~~
 
 \cleardoublepage
+\stopthumb
 \
 \backmatter
-\stopthumb
 \let\chapter\oldchapter
 \fancyhead[ER]{}
 \fancyhead[OL]{}
