--- a/sec-5-optimisation.tex
+++ b/sec-5-optimisation.tex
@@ -6,3 +6,134 @@
 \epigraph{Relax. As usual, I will bore you with the details.}%
 {\textsc{---chris lee}}
 
+Fusion or deforestation is a term used to describe techniques for having a
+compiler automatically eliminate intermediate data structures in a computation.
+For example, to compute the sum of squares from one to a given number, I could
+write:
+%
+\begin{lstlisting}[style=haskell]
+sum_of_squares :: Int -> Int
+sum_of_squares n
+    = sum
+    $ map (\x -> x * x)
+    $ enumFromTo 1 n
+\end{lstlisting}
+%
+but this code produces two intermediate lists of numbers, which requires $O(n)$
+space and associated memory pressure when traversing the list. Instead, one
+could write the program as a single tail-recursive loop as such:
+%
+\begin{lstlisting}[style=haskell]
+sum_of_squares :: Int -> Int
+sum_of_squares n = go 0 0
+  where
+    go i acc
+        | i > n         = acc
+        | otherwise     = go (i+1) (acc + i*i)
+\end{lstlisting}
+%
+The second program is much more efficient than the first, because it does not
+involve the production of any intermediate lists and executes is constant space.
+Unfortunately, the clarity of the original program has been lost. What we
+\emph{really} want is to write the first program, and have the compiler
+\emph{automatically} transform it into the second (or something morally
+equivalent).
+
+
+\begin{itemize}
+    \item parallel array fusion (AIM)
+    \item existing fusion techniques
+        \begin{itemize}
+            \item 81: wadler deforestation
+            \item 93: gill foldr/build
+            \item 07: coutts stream fusion
+            \item 08: keller repa delayed arrays
+            \item brief mention of other techniques and how they are not
+                applicable; imperative loops, category-theory stuff
+            \item limitations; why they are not applicable w.r.t. parallelism
+        \end{itemize}
+
+    \item manipulating richly typed terms
+        \begin{itemize}
+            \item basic outline
+            \item preserve types vis-\`a-vis correctness
+        \end{itemize}
+
+    \item simultaneous substitution
+    \item typed equality
+        \begin{itemize}
+            \item \url{http://stackoverflow.com/questions/13423961/how-to-derive-eq-for-a-gadt-with-a-non-kinded-phantom-type-parameter/13431026#13431026}
+        \end{itemize}
+
+    \item shrinking / dead code elimination
+
+    \item simplifier
+        \begin{itemize}
+            \item ``opportunistic'' CSE
+            \item loop recovery (mandelbrot)
+            \item constant folding, branch pruning
+            \item correctness of constant propagation, algebraic rearrangements
+            \item various examples here of C vs. idiomatic C
+        \end{itemize}
+
+    \item FUSION
+        \begin{itemize}
+            \item reiterate design requirements, constraints
+            \item explain basic idea
+            \item environment manipulations
+            \item enumerate/describe the special cases
+                \begin{itemize}
+                    \item zipWith
+                    \item slice, reshape (lost bounds checks)
+                    \item combining / floating lets
+                    \item consumers
+                \end{itemize}
+            \item fusion rules as inferences
+        \end{itemize}
+
+    \item correctness of the transform
+
+\end{itemize}
+
+
+\section{Simultaneous Substitution}
+
+An implementation of \emph{type-preserving} renaming and substitution as per
+\citet{McBride:2006}. It is seen that renaming and substitution are instances of
+a \emph{single} traversal operation, pushing functions from variables to `stuff'
+through terms, for a suitable notion of stuff.
+
+Typing rules; each rule types the general usage of a symbol, below the
+line, in terms of the parameters above the line.
+
+
+\section{Fusion}
+\textcolor{red}{[insert catchy name]}
+
+Inference rules for forcing\ldots
+
+% \inference[force 1: ]
+% {\Gamma |- \textsc{Done}\ \Gamma'\ a}
+% {\Gamma |> \Gamma' |- a}
+% 
+% \inference[force 2: ]
+% {\Gamma |- \textsc{Yield}\ \Gamma'\ sh\ f}
+% {\Gamma |> \Gamma' |- \mathrm{Generate}\ sh\ f}
+% 
+% \inference[force 3a: ]
+% {\Gamma |- \textsc{Step}\ \Gamma'\ sh\ ix\ f\ a & sh \equiv \mathrm{shape}\ a &
+% \mathrm{identity}\ f & \mathrm{identity}\ ix}
+% {\Gamma |> \Gamma' |- \mathrm{Avar}\ a}
+% 
+% \inference[force 3b: ]
+% {\Gamma |- \textsc{Step}\ \Gamma'\ sh\ ix\ f\ a & sh \equiv \mathrm{shape}\ a & \mathrm{identity}\ ix}
+% {\Gamma |> \Gamma' |- \mathrm{Map}\ f\ a}
+% 
+% \inference[force 3c: ]
+% {\Gamma |- \textsc{Step}\ \Gamma'\ sh\ ix\ f\ a & \mathrm{identity}\ f}
+% {\Gamma |> \Gamma' |- \mathrm{Backpermute}\ sh\ ix\ a}
+% 
+% \inference[force 3d: ]
+% {\Gamma |- \textsc{Step}\ \Gamma'\ sh\ ix\ f\ a}
+% {\Gamma |> \Gamma' |- \mathrm{Transform}\ sh\ ix\ f\ a}
+
