--- a/title.tex
+++ b/title.tex
@@ -32,7 +32,11 @@
 \noindent\hspace*{\centeroffset}\makebox[0pt][l]{
 \begin{minipage}{\textwidth}
     \centering
-    \textsc{\large Trevor~L.~McDonell}%\\[1.5ex]
+    \textsc{\Large Trevor~L.~McDonell}\\[1.5ex]
+
+    \textsc{School of Computer Science and Engineering}\\
+    \textsc{University of New South Wales}
+
 %    \textit{200220499}
 %    \textcolor{White}{\textit{200220499}}
 \end{minipage}}
@@ -49,8 +53,8 @@
 \noindent\hspace*{\centeroffset}\makebox[0pt][l]{
 \begin{minipage}{\textwidth}
     \centering
-%    \hspace{0.5cm}\includegraphics{images/sec-0/julia-elephant-s}
-%    \vspace*{1.87333708001in}	% height of julia-elephant-s
+    \hspace{0.5cm}\includegraphics{images/sec-0/julia-elephant-s}
+    \vspace*{1.87333708001in}	% height of julia-elephant-s
 
 %    \hspace{0.5cm}\includegraphics[height=1.87in]{images/misc/placeholder}
 %    \vspace*{1.87in}
