--- a/sec-4-implementation.tex
+++ b/sec-4-implementation.tex
@@ -19,7 +19,7 @@
                     \item representing different constructs in surface/core
                     \item surface nested $\rightarrow$ core flat ?? (fuuuuture)
                 \end{itemize}
-            \item sharing observation
+            \item sharing observation ( --> sec 5? not my work )
         \end{itemize}
 
     \item Accelerate CUDA backend
