--- a/sec-2-background.tex
+++ b/sec-2-background.tex
@@ -14,6 +14,7 @@
 \chapter{Background}
 \epigraph{Why waste time learning, when ignorance is instantaneous?}
 {\textsc{---calvin and hobbes}}
+\label{ch:background}
 
 %
 % Progression:
