--- a/sec-6-results.tex
+++ b/sec-6-results.tex
@@ -3,6 +3,7 @@
 %
 
 \chapter{Results}
+\label{ch:results}
 % \epigraph{Dionysus [is] the Master of Illusions, who could make a vine grow 
 % out grow out of a ship's plank, and in general enable his votaries to see the 
 % world as the world's not.}%
@@ -17,6 +18,18 @@
 
 \begin{itemize}
     \item performance \& analysis
+    \begin{itemize}
+      \item What is an optimisation? Describe the metrics considered.
+        \begin{itemize}
+          \item wall-clock time, parallel speedup??
+          \item instruction count
+          \item memory traffic (load/store/coalescing)
+          \item memory size (heap, register count, shared memory)
+          \item program size (number of parallel steps)
+          \item code size (generated binary, compilation time c.f. code complexity)
+        \end{itemize}
+    \end{itemize}
+
     \item expressiveness / example programs
     \item difficulties
     \begin{itemize}
